--- a/butter-blitz-2022/graphics/css/16x9_1p.css
+++ b/butter-blitz-2022/graphics/css/16x9_1p.css
@@ -1,63 +1,50 @@
 /* Runner and pronouns panel. */
-#runner-container1 {
-	width: 398px;
-	height: 63px;
-	line-height: 63px;
-	left: 14px;
-	top: 304px;
-	
-	padding-left: 15px;
-	padding-right: 15px;
+.runner-container {
+	width: 404px;
+	position: absolute;
 }
 
-/* Runner name dynamic text. */
-.runner-name {
-	max-width: 482px;
+#runner-container1 {
+	top: 424px;
+}
+
+/* Container for game info */
+#info-container {
+	width: 1487px;
+	position: absolute;
+	left: 423px;
+	bottom: 84px;
 }
 
 /* Game name panel. */
-#game-name {
-	width: 876px;
-	height: 86px;
-	line-height: 86px;
-	left: 999px;
-	top: 834px;
-		
-	padding-left: 15px;
-	padding-right: 15px;
+#game-container {
+	height: 80px;
 }
 
-/* Category and estimate panel. */
-#info-container {
-	width: 876px;
-	height: 58px;
-	line-height: 58px;
-	left: 999px;
-	top: 926px;
-	
-	padding-left: 15px;
-	padding-right: 15px;
+.info-box #console {
+	flex: 2;
+}
+
+.info-box #estimate {
+	flex: 1;
 }
 
 /* Timer panel. */
 #timer {
-	width: 524px;
-	height: 118px;
-	line-height: 118px;
-	left: 460px;
-	top: 849px;
+	font-size: 135px;
+	height: 130px;
 }
 
 /* Sponsor panel. */
 #sponsor-container {
-	width: 456px;
-	height: 624px;
-	line-height: 624px;
-	left: 0px;
-	top: 371px;
+	width: 585px;
+	height: 300px;
+	line-height: 300px;
+	left: 0;
+	top: 694px;
 }
 
 /* Sponsor image max size. */
 img#sponsor-img {
-	max-width: 85%;
+	max-width: 45%;
 }
