--- a/butter-blitz-2022/graphics/css/4x3_2p.css
+++ b/butter-blitz-2022/graphics/css/4x3_2p.css
@@ -1,59 +1,58 @@
 /* Runner and pronouns panel. */
+.runner-container, #info-container, #timer {
+	width: 591px;
+}
+
 .runner-container {
-	width: 534px;
-	height: 66px;
-	line-height: 66px;
-	
-	padding-left: 10px;
-	padding-right: 10px;
+	position: absolute;
+	bottom: 311px;
 }
 
-/* Runner name dynamic text. */
-.runner-name {
-	max-width: 480px;
+#runner-container2, #timer {
+	right: 10px;
 }
 
-/* Player 1 info position. */
-#runner-container1 {
-	left: 362px;
-	top: 732px;
-}
-
-/* Player 2 info position. */
-#runner-container2 {
-	left: 1000px;
-	top: 732px;
+/* Container for game info */
+#info-container {
+	position: absolute;
+	bottom: 93px;
 }
 
 /* Game name panel. */
-#game-name {
-	width: 506px;
-	height: 90px;
-	line-height: 90px;
-	left: 1030px;
-	top: 818px;
-	
-	padding-left: 10px;
-	padding-right: 10px;
+#game-container {
+	height: 109px;
 }
 
-/* Category and estimate panel. */
-#info-container {
-	width: 506px;
-	height: 58px;
-	line-height: 58px;
-	left: 1030px;
-	top: 910px;
-	
-	padding-left: 10px;
-	padding-right: 10px;
+#game-name {
+	font-size: 85px;
+}
+
+.info-box #console {
+	flex: 2;
+}
+
+.info-box #estimate {
+	flex: 1;
 }
 
 /* Timer panel. */
 #timer {
-	width: 524px;
-	height: 116px;
-	line-height: 116px;
-	left: 362px;
-	top: 834px;
+	font-size: 125px;
+	height: 208px;
+	position: absolute;
+	bottom: 93px;
+}
+
+/* Sponsor panel. */
+#sponsor-container {
+	width: 585px;
+	height: 300px;
+	line-height: 300px;
+	left: 0;
+	top: 694px;
+}
+
+/* Sponsor image max size. */
+img#sponsor-img {
+	max-width: 45%;
 }
