--- a/butter-blitz-2022/graphics/css/MP_CGC.css
+++ b/butter-blitz-2022/graphics/css/MP_CGC.css
@@ -1,26 +1,31 @@
 /* Runner and pronouns panel. */
+#info-container, #timer {
+	width: 591px;
+}
+
 .runner-container {
-	width: 574px;
+	width: 344px;
 	position: absolute;
+	bottom: 311px;
 }
 
 #runner-container1 {
-	top: 703px;
+	left: 611px;
+}
+
+#runner-container2 {
+	right: 611px;
 }
 
 /* Container for game info */
 #info-container {
-	width: 574px;
 	position: absolute;
-}
-
-.info-box {
-	height: 40px;
+	bottom: 93px;
 }
 
 /* Game name panel. */
 #game-container {
-	height: 80px;
+	height: 76px;
 }
 
 .info-box #console {
@@ -33,7 +38,11 @@
 
 /* Timer panel. */
 #timer {
-	height: 100px;
+	font-size: 125px;
+	height: 125px;
+	position: absolute;
+	right: 10px;
+	bottom: 93px;
 }
 
 /* Sponsor panel. */
