--- a/butter-blitz-2022/graphics/css/Poke_Crystal_Rando.css
+++ b/butter-blitz-2022/graphics/css/Poke_Crystal_Rando.css
@@ -1,39 +1,46 @@
 /* Runner and pronouns panel. */
 .runner-container {
-	width: 574px;
-	position: absolute;
+	width: 626.67px;
 }
 
-#runner-container1 {
-	top: 703px;
+.runner-container {
+	position: absolute;
+	bottom: 403px;
+}
+
+#runner-container2 {
+	left: 646.5px;
+}
+
+#runner-container3 {
+	right: 10px;
 }
 
 /* Container for game info */
 #info-container {
-	width: 574px;
+	width: 388.45px;
 	position: absolute;
-}
-
-.info-box {
-	height: 40px;
+	left: 380.55px;
+	bottom: 93px;
 }
 
 /* Game name panel. */
 #game-container {
-	height: 80px;
+	height: 70px;
 }
 
-.info-box #console {
-	flex: 2;
+#game-name {
+	font-size: 85px;
 }
 
-.info-box #estimate {
-	flex: 1;
+.info-box #category {
+	padding: 0 7.5px;
 }
 
 /* Timer panel. */
 #timer {
-	height: 100px;
+	font-size: 86px;
+	height: 80px;
 }
 
 /* Sponsor panel. */
