Checkpoint on layouts, sponsor container styling

--- a/butter-blitz-2022/graphics/css/16x9_2p.css
+++ b/butter-blitz-2022/graphics/css/16x9_2p.css
@@ -45,14 +45,14 @@
 
 /* Sponsor panel. */
 #sponsor-container {
-	width: 585px;
-	height: 300px;
-	line-height: 300px;
-	left: 0;
-	top: 694px;
+	width: 640px;
+	height: 167px;
+	left: 640px;
+	top: 10px;
 }
 
 /* Sponsor image max size. */
 img#sponsor-img {
-	max-width: 45%;
+	max-width: 100%;
+	max-height: 100%;
 }
