--- a/butter-blitz-2022/graphics/css/16x9_1p.css
+++ b/butter-blitz-2022/graphics/css/16x9_1p.css
@@ -37,14 +37,14 @@
 
 /* Sponsor panel. */
 #sponsor-container {
-	width: 585px;
-	height: 300px;
-	line-height: 300px;
-	left: 0;
-	top: 694px;
+	width: 404px;
+	height: 513px;
+	left: 10px;
+	bottom: 93px;
 }
 
 /* Sponsor image max size. */
 img#sponsor-img {
-	max-width: 45%;
+	max-width: 100%;
+	max-height: 100%;
 }
