--- a/butter-blitz-2022/graphics/css/common.css
+++ b/butter-blitz-2022/graphics/css/common.css
@@ -184,7 +184,10 @@ body {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	position: absolute;
-	
-	border: 2px solid transparent;
+	position: absolute;	
+}
+
+#sponsor-img {
+	max-width: 100%;
+	max-height: 100%;
 }
