--- a/butter-blitz-2022/graphics/css/DS.css
+++ b/butter-blitz-2022/graphics/css/DS.css
@@ -1,49 +1,37 @@
 /* Runner and pronouns panel. */
-#runner-container1 {
-	width: 526px;
-	height: 66px;
-	line-height: 66px;
-	left: 14px;
-	top: 290px;
-	
-	padding-left: 15px;
-	padding-right: 15px;
+.runner-container {
+	width: 574px;
+	position: absolute;
 }
 
-/* Runner name dynamic text. */
-.runner-name {
-	max-width: 517px;
+#runner-container1 {
+	top: 703px;
+}
+
+/* Container for game info */
+#info-container {
+	width: 574px;
+	position: absolute;
+}
+
+.info-box {
+	height: 40px;
 }
 
 /* Game name panel. */
-#game-name {
-	width: 496px;
-	height: 84px;
-	line-height: 84px;
-	left: 28px;
-	top: 542px;
-	
-	padding-left: 15px;
-	padding-right: 15px;
+#game-container {
+	height: 80px;
 }
 
-/* Category and estimate panel. */
-#info-container {
-	width: 496px;
-	height: 60px;
-	line-height: 60px;
-	left: 28px;
-	top: 632px;
-	
-	padding-left: 15px;
-	padding-right: 15px;
+.info-box #console {
+	flex: 2;
+}
+
+.info-box #estimate {
+	flex: 1;
 }
 
 /* Timer panel. */
 #timer {
-	width: 524px;
-	height: 116px;
-	line-height: 116px;
-	left: 30px;
-	top: 390px;
+	height: 100px;
 }
