--- a/butter-blitz-2022/graphics/css/common.css
+++ b/butter-blitz-2022/graphics/css/common.css
@@ -191,3 +191,18 @@ body {
 	max-width: 100%;
 	max-height: 100%;
 }
+
+/* Separator div */
+.separator {
+	border-top: 4px solid #f4b938;
+	position: relative;
+}
+
+.separator::after {
+	border-top: 4px solid #ab4d1b;
+	content: "";
+	position: absolute;
+	top: 4px;
+	left: 0;
+	right: 0;
+}
