--- a/butter-blitz-2022/graphics/css/intermission.css
+++ b/butter-blitz-2022/graphics/css/intermission.css
@@ -1,15 +1,24 @@
 /* Donation Total panel. */
-#donationTotal {
-	font-size: 100px;
-	width: 420px;
-	line-height: 180px;
-	text-align: center;
+#donationContainer {
+	font-size: 48px;
+	font-family: 'Barlow Regular';
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 1045px;
 	position: absolute;
-	top: 30px;
-	left: 1392px;
-	
-	padding-left: 15px;
-	padding-right: 15px;
+	top: 10px;
+	left: 10px;
+}
+
+#donationTotal {
+	font-size: 150px;
+	font-family: 'Barlow Bold';
+}
+
+#charityText {
+	margin-bottom: 50px;
 }
 
 .separator {
@@ -23,10 +32,8 @@
 /* Next runs container. */
 #upcoming-runs-container {
 	width: 855px;
-}
-
-#on-deck-runs-container {
-	width: 700px;
+	position: absolute;
+	right: 10px;
 }
 
 .game-container {
@@ -34,78 +41,80 @@
 	background: none;
 }
 
-/* Host panel. */
-#host-container {
-    font-size: 30pt;
-    height: 59px;
-    line-height: 59px;
+.game-container:has(.on-deck-game) {
+	justify-content: flex-start;
+}
+
+/* Host and music panels. */
+#hostMusicContainer {
+    font-size: 48px;
+	font-family: 'Barlow SemiBold';
     position: absolute;
-    top: 856px;
-    left: -8px;
-	
-	padding-left: 15px;
-	padding-right: 15px;
-	
-	border: 2px solid transparent;
+    bottom: 10px;
+    left: 10px;
+	display: flex;
+	flex-direction: column;
+}
+
+/* Host Panel. */
+#hostContainer {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	margin-bottom: 5px;
+}
+
+/* Music Panel. */
+#musicContainer {
+	width: 1900px;
+	justify-content: flex-start;
+}
+
+#music {
+	max-width: 100%;
+}
+
+/* Host label */
+#host-label {
+    color: #3a3a3a;
+    background-color: #f4b938;
+    padding: 0 5px;
+	font-family: 'Barlow Bold';
+}
+
+.pronouns {
+	font-size: 32px;
+	font-family: 'Barlow Bold';
+	padding: 0 5px;
 }
 
 /* Up Next label. */
 #up-next-label {
-	font-size: 72px;
+	font-size: 48px;
 	color: #f9f9f9;
-	font-family: 'Barlow SemiBold'
+	font-family: 'Barlow SemiBold';
 }
 
 /* Game panel. */
 #up-next-game {
-	font-size: 72px;
+	font-size: 64px;
 	color: #f4b938;
 }
 
 .on-deck-game {
-	font-size: 60px;
+	font-size: 50px;
 	color: #f4b938;
 }
 
-/* Up Next info panel. */
-#up-next-info-container {
-	width: 596px;
-	line-height: 65px;
-	position: absolute;
-	top: 405px;
-	left: 1296px;
-	
-	padding-left: 15px;
-	padding-right: 7.5px;
-	
-	border: 2px solid transparent;	
-}
-
-/* Runner name dynamic text. */
-#up-next-info {
-	max-width: 450px;	
-}
-
-.estimate-container {
-	float: right;
-	font-stretch: normal;
-	vertical-align: middle;
+/* Sponsor panel. */
+#sponsor-container {
 	width: 100%;
+	height: 400px;
+	position: initial;
 }
 
-.estimate-label {
-	display: inline-block;
-	vertical-align: middle;
-}
-
-.estimate {
-	display: inline-block;
-	font-stretch: normal;
-	font-size: 20pt;
-	margin-top: 6px;
-}
-
-.estimate-label img {
-	height: 27pt;
-	width: 100%;
+/* Sponsor image max size. */
+img#sponsor-img {
+	max-width: 80%;
+	max-height: 100%;
 }
